<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Decrypt_activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header_background"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_rectangle_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">


            <EditText
                android:id="@+id/decrypt_key"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/decrypt_key"
                android:textColorHint="@color/black"
                android:inputType="number"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:importantForAutofill="no"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/viewDivider"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_input_Decrypt"
                android:layout_width="378dp"
                android:layout_height="182dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/no_Decrypt"
                    android:layout_width="378dp"
                    android:layout_height="182dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:hint="@string/enter_text_to_decrypt"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_output_encrypt"
                android:layout_width="378dp"
                android:layout_height="182dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_rectangle_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_input_Decrypt">

                <TextView
                    android:id="@+id/result_Decrypt"
                    android:layout_width="378dp"
                    android:layout_height="182dp"
                    android:gravity="center"
                    android:hint="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/trending_background"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/layout_input_Decrypt"
                app:layout_constraintStart_toStartOf="@id/layout_input_Decrypt"
                app:layout_constraintTop_toBottomOf="@id/layout_output_encrypt"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorWhite"
        android:background="@color/colorWhite"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/selector"
        app:labelVisibilityMode="auto"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation_menu"/>

    <View
        android:id="@+id/viewDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"/>

</androidx.constraintlayout.widget.ConstraintLayout>